# gaussian-smooth

./: LICENSE  README.md  pyproject.toml
gaussmooth/: __init__.py  core.py
test/: test_smooth.py
