[project]
name = "gaussmooth"
version = "0.1.0"
description = "Tiny utility for Gaussian smoothing of 1D data."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Marcin Krysiak", email = "m.t.krysiak@gmail.com" }]
dependencies = ["numpy"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
